Fixed bug in Firefox of testimonial img being too small
Flex was shrinking the image beyond it's set width, so I blocked it from flex-shrinking

--- a/assets/css/3-sections/_testimonial.sass
+++ b/assets/css/3-sections/_testimonial.sass
@@ -24,6 +24,7 @@
 
   img
     width: 130px
+    flex-shrink: 0 //This is needed or firefox makes it too small
     margin: 0 auto
     display: block
 
